--- a/pArHabitation.html
+++ b/pArHabitation.html
@@ -105,14 +105,14 @@
 		</div> <!-- end text menu  -->
 	  	
 	  <div class="listeDroite">
-	  <div class="text-center"> Rénovations et extensions de constructions anciennes<br></div>
+	  <div class="text-center"><span class="badge badge-dark">Rénovations et extensions de constructions anciennes </span> <br></div>
 		  <a class="list_two" href="pProjet111.html">• Propriété à Mortagne-au-Perche (61) Poirier</a><br>
 		  <a class="list_two" href="pProjet112bis.html">• Restructuration de 6 bâtiments pour l'aménagement de 7 gîtes - La Chapelle Montligeon (61)</a><br>
 		  <a class="list_two" href="pProjet113.html">• Propriété dans la campagne d'Argentan (61)</a><br>
 		  <a class="list_two" href="pProjet114.html">• Propriété à Pervenchères (61)</a><br>
 		  <a class="list_two" href="pProjet115.html">• propriété en bordure de forêt à St Victor de Réno</a><br>
 		  <br>
-     <div class="text-center"> Constructions Neuves<br></div>
+     <div class="text-center"> <span class="badge badge-dark">Constructions Neuves</span><br></div>
 		  <a class="list_two" href="pProjet121.html">• Maison particuliere à Monceaux-au-Perche (61)</a><br>
 		  <a class="list_two" href="pProjet122.html">• Maison particulière à Alençon (61) </a><br>
 	  </div>
