--- a/pProjet112bis.html
+++ b/pProjet112bis.html
@@ -150,47 +150,47 @@ En plein cœur du bourg historique, le projet de réhabilitation devait se fondr
 	    <p>&nbsp;</p>
 	    <p>&nbsp;</p>
 	    <p>Rénovations et extensions de constructions anciennes<br>
-		  <a href="pProjet111.html" class="list_two" >- Propriété à Mortagne-au-Perche (61) Poirier</a><br>
-		  <a class="actived" href="pProjet112bis.html">- Restructuration de 6 bâtiments pour l'aménagement de 7 gîtes - La Chapelle Montligeon (61)</a><br>
-		  <a href="pProjet113.html" class="list_two">- Propriété dans la campagne d'Argentan (61)</a><br>
-		  <a href="pProjet114.html" class="list_two">- Propriété à Pervenchères (61)</a><br>
-		  <a href="pProjet115.html" class="list_two">- propriété en bordure de forêt à St Victor de Réno</a><br>
+		  <a href="pProjet111.html" class="list_two" >• Propriété à Mortagne-au-Perche (61) Poirier</a><br>
+		  <a class="actived" href="pProjet112bis.html">• Restructuration de 6 bâtiments pour l'aménagement de 7 gîtes - La Chapelle Montligeon (61)</a><br>
+		  <a href="pProjet113.html" class="list_two">• Propriété dans la campagne d'Argentan (61)</a><br>
+		  <a href="pProjet114.html" class="list_two">• Propriété à Pervenchères (61)</a><br>
+		  <a href="pProjet115.html" class="list_two">• propriété en bordure de forêt à St Victor de Réno</a><br>
 		  <br>
       Constructions Neuves<br>
-		  <a href="pProjet121.html" class="list_two">- Maison particuliere à Monceaux-au-Perche (61)</a><br>
-		  <a href="pProjet122.html" class="list_two">- Maison particulière à Alençon (61)</a><br>
+		  <a href="pProjet121.html" class="list_two">• Maison particuliere à Monceaux-au-Perche (61)</a><br>
+		  <a href="pProjet122.html" class="list_two">• Maison particulière à Alençon (61)</a><br>
 	    </p>
       </div>
 	
-	  <div id="btArchitecture"
-		onMouseOver="MM_changeProp('cercleHaut','','background','#ffffff','DIV')"
-		onMouseOut="MM_changeProp('cercleHaut','','background','#ffffff','DIV')">
+	<div id="btArchitecture">
 	    <img src="images/imArchitectureBlanc.gif" width="279" height="18" alt=""/> </div>
-	  <div id="btamenagements"
-	    onMouseOver="MM_changeProp('cercleCentre','','background','#e3e9ec','DIV')"	onMouseOut="MM_changeProp('cercleCentre','','background','#51646e','DIV')">
-		  <img src="images/imAmenagementGris.gif" width="279" height="18" alt=""/> 
-    </div>
+		<div id="btamenagements">
+		  <img src="images/imAmenagementBlanc.gif" width="279" height="18" alt=""/> 
+	  </div>
 			
-	  <div id="btarchitriad" 
-		onMouseOver="MM_changeProp('cercleBas','','background','#e3e9ec','DIV')"
-		onMouseOut="MM_changeProp('cercleBas','','background','#51646e','DIV')">
-		  <img src="images/imArchiTriadGris.gif" width="279" height="18" alt=""/>
-	</div>
+		<div id="btarchitriad" >
+		  <img src="images/imArchitriadBlanc.gif" width="279" height="18" alt=""/>
+	  </div>
 		
 		<div id="traitVertGrisFonce">
-    </div>
-	  <div id="traitNoirBas">
-    </div>
-	  <div id="cercleHaut" 
-			onMouseOver="MM_changeProp('cercleHaut','','background','#ffffff','DIV')"
-			onMouseOut="MM_changeProp('cercleHaut','','background','#ffffff','DIV')">
-	</div>
+	  </div>
+		<div id="traitNoirBas">
+	  </div>
+		<div id="cercleHaut" class="cercleActive">
+	  </div>
+		  
+		  
 		<div id="cercleCentre"			        
 		onMouseOver="MM_changeProp('cercleCentre','','background','#e3e9ec','DIV')"	onMouseOut="MM_changeProp('cercleCentre','','background','#51646e','DIV')">
-	</div>
+	  </div>
 		<div id="cercleBas"
 			onMouseOver="MM_changeProp('cercleBas','','background','#e3e9ec','DIV')"
 			onMouseOut="MM_changeProp('cercleBas','','background','#51646e','DIV')">
+	  </div>
+	  
+	  
+	  
+	  <div id="traitNoirBas">
     </div>
   </div>
 </div>
