--- a/olds/pArEtablissement.html
+++ b/olds/pArEtablissement.html
@@ -5,8 +5,7 @@
 <title>ArchiTriad</title>
 <LINK rel=STYLESHEET href="pages_fond_couleur.css" type="text/css">
 <LINK rel=STYLESHEET href="fCssFonts.css" type="text/css">
-<LINK rel=STYLESHEET href="cssArHabitation.css" type="text/css">
-<script src="jQueryAssets/jquery-1.11.1.min.js"></script>
+<LINK rel=STYLESHEET href="cssArEtablissements.css" type="text/css">
 <script type="text/javascript">
 function MM_changeProp(objId,x,theProp,theValue) { //v9.0
   var obj = null; with (document){ if (getElementById)
@@ -106,16 +105,23 @@ function MM_goToURL() { //v3.0
 	  </div>
 	  	
 	  <div id="listeDroite">
-	  Rénovations et extensions de constructions anciennes<br>
-		  <a href="pProjet111.html">- Propriété à Mortagne-au-Perche (61) Poirier</a><br>
-		  <a href="pProjet112bis.html">- Restructuration de 6 bâtiments pour l'aménagement de 7 gîtes - La Chapelle Montligeon (61)</a><br>
-		  <a href="pProjet113.html">- Propriété dans la campagne d'Argentan (61)</a><br>
-		  <a href="pProjet114.html">- Propriété à Pervenchères (61)</a><br>
-		  <a href="pProjet115.html">- propriété en bordure de forêt à St Victor de Réno</a><br>
-		  <br>
-      Constructions Neuves<br>
-		  <a href="pProjet121.html">- Maison particuliere à Monceaux-au-Perche (61)</a><br>
-		  <a href="pProjet122.html">- Maison particulière à Alençon (61)
+	 
+		  <a href="pProjet21.html">- Mairie de Bazoches-sur-Hoêne (61)</a><br>
+		  <a href="pProjet22.html">- Pôle enfance à Mortagne-au-Perche (61)</a><br>
+		  <a href="pProjet23.html">- Ecole primaire à Bazoches-sur-Hoêne (61)</a><br>
+		  <a href="pProjet24.html">- Siège de l'Association des Chasseurs de l'Orne à Silly-en-Gouffern (61)</a><br>
+		  <a href="pProjet25.html">- Construction d'un restaurant scolaire pour l'école Pierre Rasse Mathieu (14)</a><br>
+		  <a href="pProjet26.html">- Aménagement et extension de la salle de la jeunesse de Montabard en centre culturel rural (61)</a><br>
+		  <a href="pProjet27.html">- Pole Santé pluridisciplinaire Mortagne-au-Perche (61)</a><br>
+		  <a href="pProjet28.html">- Aménagement de la médiathèque dans la halle aux grains ville de Mortagne au Perche (61)</a><br>
+		  <a href="pProjet29.html">- Crêche à Ecouché (61)</a><br>
+		  <a href="pProjet210.html">- CAS Mortagne-au-Perche (61)</a><br>
+		  <a href="pProjet211.html">- SAINT PIERRE SUR DIVES - Reconstruction de l'école primaire BBC</a><br>
+		  <a href="pProjet212.html">- Aménagement des halles de Bonnetable en école de danse et de musique (72)</a><br>
+		  <a href="pProjet213.html">- Construction d'un restaurant scolaire - La Ferté Fresnel (61)</a><br>
+		  <a href="pProjet214.html">- Restructuration de la MFR - Mortagne-au-Perche (61)</a><br>
+		  <a href="pProjet215.html">- Restructuration et rénovation de la salle des anciens - St Cosmes en Vairais (72)</a><br>
+		  <a href="pProjet216.html">- Etablissement de formation IRFA - Hérouville St Clair (14)</a><br>
 	  </div>
 	
 		<div id="btArchitecture"
