--- a/pArchitecture.html
+++ b/pArchitecture.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="images/at.ico" type="image/x-icon">
     <script type="text/javascript" src="script.js"></script>
 
- <link rel="stylesheet" type="text/css" href="style_2.css">
+ <link rel="stylesheet" type="text/css" href="css/style_2.css">
 
 </head>
 
