--- a/habitation/pProjet113.html
+++ b/habitation/pProjet113.html
@@ -8,42 +8,42 @@
 
 
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-<link rel="shortcut icon" href="images/at.ico" type="image/x-icon">
 
-<LINK rel=STYLESHEET href="cssProjet.css" type="text/css">
-	<link rel="stylesheet" type="text/css" href="style_3.css">
-<script type="text/javascript" src="script.js"></script>
-<script src="jQueryAssets/jquery-1.11.1.min.js"></script>
+<link rel="shortcut icon" href="../images/at.ico" type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="../css/cssProjet.css">
+<link rel="stylesheet" type="text/css" href="../css/style_3.css">
+<script type="text/javascript" src="../script.js"></script>
+<script src="../jQueryAssets/jquery-1.11.1.min.js"></script>
 
 </head>
 
 
-
-<body onLoad="MM_preloadImages('images/p1/p112/p112Im2.gif')">
+<!-- onLoad="MM_preloadImages('images/p1/p112/p112Im2.gif')"
+ --><body >
 
 <div class="container">
 
 <div id=fond>
 <div id=imageFond>
-  <img src="images/fond/fondPageArchitecture.gif" width="1100" height="650" alt=""/> </div>
+  <img src="../images/fond/fondPageArchitecture.gif" width="1100" height="650" alt=""/> </div>
  
   <div id="zLeftProject">
 	  <div id="logoLeftCarre">
 	  <!--<div id="logoLeftCarre" onClick="MM_goToURL('parent','index.html');return document.MM_returnValue">-->
-		 <a href="index.html"><img src="images/logoCarreBlanc.gif" width="85" height="85" alt=""/></a> </div>
+		 <a href="index.html"><img src="../images/logoCarreBlanc.gif" width="85" height="85" alt=""/></a> </div>
   <div id="triangleProject">
 	</div>
 	  
 	  <div id="btcontact" class="linky" > 
-			<a class="linky str" href="">&nbsp;Contact</a>
+			<a class="linky" href="pContact.html">&nbsp;Contact</a>
 					</div>
 	  
 	  	<!--<div id="btAgenceMortagne" onClick="MM_goToURL('parent','pAgenceMortagne.html');return document.MM_returnValue"-->
 		<div id="btAgenceMortagne" >
-		 <a class="linky"  href=""> Agence&nbsp;Mortagne</a>
+		 <a class="linky"  href="../pAgenceMortagne.html"> Agence&nbsp;Mortagne</a>
 	</div>
 		<div id="btAgenceArgentan">
-				 <a class="linky"  href=""> Agence&nbsp;Argentan</a>
+				 <a class="linky"  href="../pAgenceArgentan.html"> Agence&nbsp;Argentan</a>
     </div>
   
 	  
@@ -59,89 +59,94 @@
 	<div class="right">
 	  </div>
 	<div id="TexteProject">
-		Réaménagement complet d’un Ilot de 5 immeubles en un complexe de 7 gîtes dont un gîte collectif ERP, une laverie et l’ensemble des aménagements extérieurs.<br><br>
-En plein cœur du bourg historique, le projet de réhabilitation devait se fondre dans le contexte « village percheron » tout en accentuant l’accessibilités et attractivités avec un jeu de rampes, de terrasses et de flexibilité dans le découpage des logements. Pour les accents sur le confort et la sécurité, il a été retenu une isolation performante et une gestion centralisée du système de chauffage, divisé en de nombreuses zones.</div>
+		Le projet concerne la réhabilitation et la pérennisation des dépendances d’une propriété de caractère, s’articulant autour de la Maison de Maître.<br>
+Trois bâtiments mis en valeur par la création de verrières abritant tour à tour, un pressoir restauré et un logement indépendant, un spa nouvellement aménagé avec salle de réception, une salle de jeux… le tout s’ouvrant sur la campagne verdoyante. 
+Les volumes anciens ont été restaurés dans le respect des techniques traditionnelles, tuiles plates, maçonnerie de pierre mise en valeur par des enduits à pierre vue…</div>
+   
    
     </div>
 	 
 	<div id="cadreImageBis">
-      <img id="imageProject" src="images/p1/p112/p112Im1.gif" width="525" height="390" alt=""/> </div>   
-	 
+	   <img id="imageProject" src="../images/p1/p113/p113Im1.gif" width="525" height="390" alt=""/> </div>   
 </div>
+
+
 	<div id="zCenter">
 	<div id="titreProjet"><br>
-	  <span class="title_orange">GITES - 61400 LA CHAPELLE MONTLIGEON</span><br>
+	  <span class="title_orange">ENSEMBLE IMMOBILIER – 61310 EXMES</span><br>
 		<span class="sousTitle" >
 			Maître d’ouvrage : Privé<br>
-			Année : 2015<br>
-			Coût global de l’opération : bâtiment 1 300 000 € HT+ VRD 130 000 € HT
+			Année : 2007<br>
+			
 		</span>
 	  </div>
-	<div id=cercleIm1 
-	onMouseOver="MM_swapImage('imageProject','','images/p1/p112/p112Im1.gif',1);
+
+
+ <div id=cercleIm1 
+		onMouseOver="MM_swapImage('imageProject','','../images/p1/p113/p113Im1.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm4','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm5','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
-	  </div>
+		</div>
 	<div id=cercleIm2
-	 onMouseOver="MM_swapImage('imageProject','','images/p1/p112/p112Im2.gif',1);
+	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p113/p113Im2.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm4','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm5','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
-	  </div>
+		</div>
 	<div id=cercleIm3
-	onMouseOver="MM_swapImage('imageProject','','images/p1/p112/p112Im3.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p113/p113Im3.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm4','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm5','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
-	  </div>
+		</div>
 	<div id=cercleIm4
-	onMouseOver="MM_swapImage('imageProject','','images/p1/p112/p112Im4.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p113/p113Im4.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm4','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm5','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
-	  </div>
+		</div>
 	<div id=cercleIm5
-	onMouseOver="MM_swapImage('imageProject','','images/p1/p112/p112Im5.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p113/p113Im5.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm4','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm5','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
-	  </div>
+		</div>
 	<div id=cercleIm6
-	onMouseOver="MM_swapImage('imageProject','','images/p1/p112/p112Im6.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p113/p113Im6.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm4','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm5','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm6','','backgroundColor','#e05015','DIV')">
-	  </div>
+		</div>
 	
 	<div id="texteBasProjet">
-			<a href="pArHabitation.html"><span class="actived">HABITATION</span></a>&nbsp;
+			<a href="../pArHabitation.html"><span class="actived">HABITATION</span></a>&nbsp;
 			<span >///</span>&nbsp;
-			<a href="pArEtablissement.html" class="list_two">ETABLISSEMENTS CULTURELS, SOCIAUX ET SCOLAIRES</a>&nbsp;
+			<a href="../pArEtablissement.html" class="list_two">ETABLISSEMENTS CULTURELS, SOCIAUX ET SCOLAIRES</a>&nbsp;
 			<span >///</span>&nbsp;
-			<a href="pArIndustrie.html" class="list_two">INDUSTRIES, BUREAUX ET COMMERCES</a>&nbsp;
+			<a href="../pArIndustrie.html" class="list_two">INDUSTRIES, BUREAUX ET COMMERCES</a>&nbsp;
 			<span >///</span>&nbsp;
-			<a href="pArPatrimoine.html" class="list_two">PATRIMOINE</a>&nbsp;
+			<a href="../pArPatrimoine.html" class="list_two">PATRIMOINE</a>&nbsp;
 			<span >///</span>&nbsp;
-			<a href="pArDivers.html" class="list_two">DIVERS</a>&nbsp;
+			<a href="../pArDivers.html" class="list_two">DIVERS</a>&nbsp;
 			<span >///</span>&nbsp;
 		
 		
@@ -153,25 +158,25 @@ En plein cœur du bourg historique, le projet de réhabilitation devait se fondr
 	  <div class="listeDroite">
 	  	     <div class="text-center title_orange">Rénovations et extensions de constructions anciennes<br></div> 
 		  <a href="#" class="list_two" >• Propriété à Mortagne-au-Perche (61) Poirier</a><br>
-		  <a class="actived" href="pProjet112bis.html">• Restructuration de 6 bâtiments pour l'aménagement de 7 gîtes - La Chapelle Montligeon (61)</a><br>
-		  <a href="pProjet113.html" class="list_two">• Propriété dans la campagne d'Argentan (61)</a><br>
-		  <a href="pProjet114.html" class="list_two">• Propriété à Pervenchères (61)</a><br>
-		  <a href="#" class="list_two">• propriété en bordure de forêt à St Victor de Réno</a><br>
+		  <a   class=" list_two " href="../habitation/pProjet112bis.html">• Restructuration de 6 bâtiments pour l'aménagement de 7 gîtes - La Chapelle Montligeon (61)</a><br>
+		  <a class="actived"  href="../habitation/pProjet113.html" class="list_two" >• Propriété dans la campagne d'Argentan (61)</a><br>
+		  <a href="../habitation/pProjet114.html" class="list_two">• Propriété à Pervenchères (61)</a><br>
+		  <a href="../habitation/pProjet115.html" class="list_two">• propriété en bordure de forêt à St Victor de Réno</a><br>
 		  <br>
        <div class="text-center title_orange">Constructions Neuves<br></div> 
-		  <a href="pProjet121.html" class="list_two">• Maison particuliere à Monceaux-au-Perche (61)</a><br>
-		  <a href="pProjet122.html" class="list_two">• Maison particulière à Alençon (61)</a><br>
+		  <a href="../habitation/pProjet121.html" class="list_two">• Maison particuliere à Monceaux-au-Perche (61)</a><br>
+		  <a href="../habitation/pProjet122.html" class="list_two">• Maison particulière à Alençon (61)</a><br>
 	    </p>
       </div>
 	
 	<div id="btArchitecture">
-	    <a href="pArchitecture.html"><img src="images/imArchitectureBlanc.gif" width="279" height="18" alt=""/>  </div></a>
+	    <a href="../pArchitecture.html"><img src="../images/imArchitectureBlanc.gif" width="279" height="18" alt=""/>  </div></a>
 		<div id="btamenagements">
-		  <img src="images/imAmenagementBlanc.gif" width="279" height="18" alt=""/> 
+		  <img src="../images/imAmenagementBlanc.gif" width="279" height="18" alt=""/> 
 	  </div>
 			
 		<div id="btarchitriad" >
-		  <img src="images/imArchitriadBlanc.gif" width="279" height="18" alt=""/>
+		  <img src="../images/imArchitriadBlanc.gif" width="279" height="18" alt=""/>
 	  </div>
 		
 		<div id="traitVertGrisFonce">
@@ -199,5 +204,9 @@ En plein cœur du bourg historique, le projet de réhabilitation devait se fondr
 		
 </div>
 
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
 </html>
