--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>ArchiTriad</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <link rel="shortcut icon" href="images/at.ico" type="image/x-icon">
     <script type="text/javascript" src="script.js"></script>
@@ -107,6 +107,8 @@ ARCHI-Triad,&nbsp;CABINET&nbsp;D'ARCHITECTURE<br>
 
                 <!-- circles -->
                <a href="pArchitecture.html"> <div id="cercleHaut" >
+                 <p>&nbsp;</p>
+                 <p>&nbsp;</p>
 
                 </div>					</a>
 				
